refactor: 펫 카탈로그 어드민 API 제거
